Add moderators to threads. Automatically create threads